<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/tulip">

    <TextView android:id="@+id/tv_uname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/label_user"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_uname"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_pwd"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_uname"
        android:text="@string/label_pwd"
        android:gravity="center"
        android:textSize="20sp"
      />

    <EditText android:id="@+id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_pwd"
        android:layout_marginTop="20dp"
        android:layout_below="@id/et_uname"
        android:layout_alignParentEnd="true"

        android:textSize="20sp" />

    <RadioButton android:id="@+id/radio1"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_pwd"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp" />

    <TextView android:id="@+id/tv_rm"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_pwd"
        android:layout_toRightOf="@id/radio1"
        android:layout_marginTop="37dp"

        android:text="@string/remember_button"
        android:gravity="center"
        android:textSize="20sp" />

    <Button android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/radio1"
        android:layout_marginTop="37dp"

        android:text="@string/submit_button" />

    <Button android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/radio1"
        android:layout_marginTop="37dp"
        android:layout_toRightOf="@id/button1"
        android:layout_marginLeft="50dp"
        android:text="@string/clear_button" />

    <Button android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@+id/radio1"
        android:layout_marginTop="37dp"
        android:layout_toRightOf="@id/button2"
        android:layout_marginLeft="50dp"
        android:text="@string/register_button" />

</RelativeLayout>
