<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/tulip"
    tools:context="com.symphonyteleca.loginportal.Registration">

    <TextView android:id="@+id/tv_fname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/fname"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_fname"
        android:layout_marginTop="10dp"

        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_mname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_fname"
        android:text="@string/mname"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_mname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_mname"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_fname"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_lname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_mname"
        android:text="@string/lname"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_lname"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_mname"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_email"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_lname"
        android:text="@string/email"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_email"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_lname"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_phno"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_email"
        android:text="@string/phno"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_phno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_phno"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_email"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_addr"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_phno"
        android:text="@string/addr"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_addr"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_phno"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView android:id="@+id/tv_pwd"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_addr"
        android:text="@string/pwd"
        android:gravity="bottom"
        android:textSize="20sp" />

    <EditText android:id="@+id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_pwd"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_addr"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />


    <Button android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/et_pwd"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_button"
        android:textSize="15sp" />




</RelativeLayout>
